# ros2_turtlebot

./: .gitignore  command_histiry.md  docker-compose.yml  dockerfile
workspace/src/my_nav_interfaces/: CMakeLists.txt  package.xml
workspace/src/my_nav_interfaces/srv/: FollowPath.srv
workspace/src/my_nav_pkg/: CMakeLists.txt  package.xml  setup.py
workspace/src/my_nav_pkg/launch/: my_nav.launch.py
workspace/src/my_nav_pkg/my_nav_pkg/: bt_navigator.py  controller.py  my_nav_node.py  planner.py  planner_utils.py  straight_avoid.py
workspace/src/my_nav_pkg/src/: my_nav_node.cpp
workspace/src/my_turtlebot_spawner/: CMakeLists.txt  package.xml
workspace/src/my_turtlebot_spawner/launch/: spawn_waffle.launch.py
workspace/src/my_turtlebot_spawner/objects/: 4walls.sdf  box.sdf  cylinder.sdf  long_wall.sdf  short_wall.sdf  walls.sdf
workspace/src/my_turtlebot_spawner/scripts/: spawn_waffle.py
workspace/src/my_turtlebot_spawner/worlds/: 4walls.world  test.world
